--- a/DAY 6/style.css
+++ b/DAY 6/style.css
@@ -1,3 +1,8 @@
+
+h3 {
+    background-color: antiquewhite !important;
+}
+
 /***************UNIVERSAL SELECTOR*************/
 *{
     font-family: 'Courier New', Courier, monospace;
@@ -68,5 +73,60 @@ h1, h3{
  }
  input[type]{
     background-color: ghostwhite;
-    
+
+ }
+
+ /*************PSEUDO CLASS************/
+
+ button:hover {
+    background-color: black;
+    color: white;
+    border-radius: 30px;
+ }
+
+ h3:hover {
+    text-decoration: none;
+ }
+
+ button:active {
+    background-color: darkmagenta;
+    color: black;
+ }
+
+ p:active {
+    font-weight: bold;
+    color: green;
+
+ }
+
+ /* :checked it is basically use in radio and checked button */
+
+ input[type="radio"]:checked + label{
+    font-weight: bold;
+    color: red; 
+ }
+ 
+ div:nth-of-type(2n) {
+    background-color: blanchedalmond;
+ }
+
+ /*********PSEUDO ELEMENT  ***********/
+
+ h1::first-letter{
+    color: black;
+ }
+
+ p::first-line {
+    color: rgb(15, 15, 193);
+ }
+
+ p::selection {
+    background-color : rgb(216, 223, 12);
+ }
+
+ h3 {
+    background-color: yellowgreen;
+ }
+ h3 {
+    background-color: blueviolet;
  }
