--- a/DAY 7/style.css
+++ b/DAY 7/style.css
@@ -1,3 +1,10 @@
+* {
+    padding: 0;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
 div {
         height: 200px;
         width: 500px;
@@ -5,20 +12,45 @@ div {
         /* border-width: 5px;
         border-style: solid;
         border-color: black; */
-        border: 5px solid yellow;
         /* border-left-style: dashed;
         border-left-color: blue; */
-        border-top: 5px dashed blue;
-
+        /* border-top: 5px dashed blue; */   
+        /* border-radius: 50%; */
+        /* border-radius: 30px; */
+        border: 5px solid black;
+        border-radius: 10px;
+        padding-top: 60px;
+        
+        /* margin-bottom: 25px;
+        margin-left: 15px; */
+        margin: 10px 20px 30px 50px;
 }
 
-h1 {
+h1 { 
     /* border-width: 4px;
     border-style: dotted;
     border-color: purple; */
 
-    border: 5px dotted rgb(171, 20, 20);
+    border: 5px dashed green;
+    /* b  */
     /* height: 4px;
     width: 20px; */ 
-    /* border-left-style: dotted; */
+}
+
+button {
+            background-color: rgb(252, 210, 0);
+            color: black;
+            border: 2px sold black;
+            border-radius: 25px;
+            /* padding-left: 25px;
+            padding-right: 25px; */
+            padding: 0px 25px;
+            width: 150px;
+            height: 45.600px;
+            margin-left: 10rem;
+    }
+
+button:hover {
+    background-color: black;
+    color: white;
 }
