--- a/DAY 7/Qs15.css
+++ b/DAY 7/Qs15.css
@@ -1,8 +1,9 @@
-#outerdiv {
+/* #outerdiv {
     height: 200px;
     width: 70px;
     border: 2px solid black;
     /* background-color: black; */
+    /*
 } 
 
 .innerdiv {
@@ -11,6 +12,11 @@
     margin: 10px;
     border: 2px solid black;
     border-radius: 50%;
+
+} */
+#outerdiv {
+    display: grid;
+    border: 2px solid black;
 
 }
 
