--- a/DAY 7/dispaly.css
+++ b/DAY 7/dispaly.css
@@ -6,3 +6,11 @@ span {
     padding: 50px; /* only set in left and right side */
     margin: 20px;
 }
+
+div {
+    border: 2px solid black;
+    height: 100px;
+    width: 300px;
+    padding: 50px;
+    margin: 20px;
+}
