--- a/DAY 8/Card_Effect.css
+++ b/DAY 8/Card_Effect.css
@@ -1,32 +1,42 @@
-* {
-    background-color: rgb(178, 148, 223);
+body {
+    background: linear-gradient(to right bottom, #211f2f, #918ca9);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    height: 100%;
+
 }
+
 .card {
     width: 200px;
     height: 300px;
     border: 2px solid black;
     display: inline-block;
-    margin: 20px;
-    
+    margin: 50px;
+    background-color: #feefdd;
     border-radius: 5px;
     box-shadow: 0px 4px 8px black;
     transition: 1s;
-    
+
+
+
 }
 
 img {
     width: 100%;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    
+
 
 }
 
-
 .desc {
     padding: 0 2px 0 2px;
+
 }
 
 .card:hover {
     box-shadow: 0px 4px 16px greenyellow;
+    transform: scale(0.9);
+    cursor: pointer;
+
 }
