--- a/DAY 8/Card_Effect.css
+++ b/DAY 8/Card_Effect.css
@@ -38,5 +38,6 @@ img {
     box-shadow: 0px 4px 16px greenyellow;
     transform: scale(0.9);
     cursor: pointer;
+    transform: rotate(360deg);
 
 }
