--- a/DAY 9/style.css
+++ b/DAY 9/style.css
@@ -7,7 +7,7 @@
     margin: 10px auto;
     display: flex;  /*row */
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content:space-between;
 }
 
 h1 {
