--- a/DAY 9/style.css
+++ b/DAY 9/style.css
@@ -1,16 +1,18 @@
 
 #continer {
-    height: 300px;
+    height: 600px;
     width: 80%;
     background-color: rgb(191, 212, 212);
     border: 2px solid #000000;
     margin: 10px auto;
     display: flex;  /*row */
-    flex-direction: column-reverse;
+    flex-direction: row;
     /* justify-content:flex-start; */
-    justify-content: row;
-    flex-wrap: wrap-reverse;
-}
+    /* justify-content: space-between; */
+    align-content: space-between;
+    flex-wrap: wrap;
+    
+} 
 
 h1 {
     text-align: center;
@@ -23,8 +25,4 @@ h1 {
     font-size: 1.5em;
     
     
-}
-img {
-    border-radius: 50%;
-    background-color: #000000;
 }
