--- a/DAY 9/style.css
+++ b/DAY 9/style.css
@@ -6,13 +6,15 @@
     border: 2px solid #000000;
     margin: 10px auto;
     display: flex;  /*row */
-    flex-direction: row;
-    /* justify-content:flex-start; */
+    flex-direction: column;
+    justify-content:flex-start;
     /* justify-content: space-between; */
-    align-content: space-between;
     flex-wrap: wrap;
+    align-content: center;
+    
     
 } 
+
 
 h1 {
     text-align: center;
