--- a/DAY 9/style.css
+++ b/DAY 9/style.css
@@ -6,18 +6,18 @@
     border: 2px solid #000000;
     margin: 10px auto;
     display: flex;  /*row */
-    flex-direction: column;
+    flex-direction: row;
     justify-content:flex-start;
     /* justify-content: space-between; */
     flex-wrap: wrap;
-    align-content: center;
+    align-content: space-evenly;
     
     
 } 
 
 
 h1 {
-    text-align: center;
+    text-align: center; 
 }
 #continer div {
     height: 100px;
