--- a/DAY 9/style.css
+++ b/DAY 9/style.css
@@ -1,7 +1,7 @@
 
 #continer {
     height: 600px;
-    width: 80%;
+    width: 60%;
     background-color: rgb(191, 212, 212);
     border: 2px solid #000000;
     margin: 10px auto;
@@ -9,11 +9,26 @@
     flex-direction: row;
     justify-content:flex-start;
     /* justify-content: space-between; */
-    flex-wrap: wrap;
-    align-content: space-evenly;
+    /* flex-wrap: wrap; */
+    align-content: flex-start;
     
-    
+  
 } 
+
+#blue {
+/* flex-basis: 400px; */
+   /* flex-grow: 3; */
+   flex-shrink: 2;
+   
+   
+}
+
+#orange {
+    align-self: flex-start;
+    /* flex-basis: 50px; */
+    /* flex-grow: 1; */
+    flex-shrink: 1;
+}
 
 
 h1 {
