--- a/Assignment 8/Q2.css
+++ b/Assignment 8/Q2.css
@@ -1,3 +1,7 @@
+* {
+    font-family: Inter,sans-serif;
+    
+}
 #continer {
     height: 50px;
     width: 900px;
@@ -17,4 +21,39 @@
     line-height: 2.5rem;
     margin-left: 5px;
 
+}
+
+img {
+    height: 75px;
+    width: 75px;
+    margin-top: 50px;
+    margin-left: 50px;
+}
+
+button {
+    height: 45px;
+    width: 263px;
+    border: 1px solid black;
+    background-color: white;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+button:hover {
+    background-color: black;
+    color: white;
+    
+}
+h1 {
+    display:flex;
+    font-size: 50px;
+}
+p{
+    color: black;
+    height:100;
+    width:475;
+    display: flex;
+    font-size: 20px;
+    padding: 10px 0 0;
 }
