--- a/DAY 9/style.css
+++ b/DAY 9/style.css
@@ -18,7 +18,7 @@
 #blue {
 /* flex-basis: 400px; */
    /* flex-grow: 3; */
-   flex-shrink: 2;
+   flex-shrink: 1;
    
    
 }
@@ -28,6 +28,7 @@
     /* flex-basis: 50px; */
     /* flex-grow: 1; */
     flex-shrink: 1;
+    flex: 2 2 100px;
 }
 
 
