--- a/DAY 8/Card_Effect.css
+++ b/DAY 8/Card_Effect.css
@@ -3,6 +3,9 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     height: 100%;
+    display: flex;
+    justify-content: space-around;
+    /* align-items: center; */
 
 }
 
