--- a/DAY 10 (CSS Grid)/style.css
+++ b/DAY 10 (CSS Grid)/style.css
@@ -3,10 +3,17 @@
     height: 300px;
     background-color: yellow;
     display: grid;
-    grid-template-rows: 50px 50px 50px 50px 
+    /* grid-template-rows: 50px 50px 50px 50px 
     50px;
-    grid-template-columns: 200px 200px 200px;
-    /* grid-template-columns: auto auto auto auto; Not use */
+    grid-template-columns: 200px 200px 200px; */
+    /* grid-template-rows: repeat(4,1fr); */
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(3,1fr);
+    /* row-gap: 10px;
+    column-gap: 30px; */
+    grid-gap: 10px;
+
+   
 }
 
 .item {
