--- a/DAY 10 (CSS Grid)/style.css
+++ b/DAY 10 (CSS Grid)/style.css
@@ -3,24 +3,48 @@
     height: 300px;
     background-color: yellow;
     display: grid;
-    /* grid-template-rows: 50px 50px 50px 50px 
-    50px;
+
+    /*********GRID TEMPLATES*********/
+    /* grid-template-rows: 50px 50px 50px 
+      50px 50px;
     grid-template-columns: 200px 200px 200px; */
     /* grid-template-rows: repeat(4,1fr); */
     grid-template-rows: 1fr 1fr 1fr 1fr;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
+
+/*********GRID GAPS*********/
     /* row-gap: 10px;
     column-gap: 30px; */
     grid-gap: 10px;
+justify-items: end;
 
-   
+
+    
+
+
+
 }
 
 .item {
-    /* height: 50px;
-    width: 100px; */
+    height: 50px;
+    width: 100px;
     background-color: greenyellow;
     border: 2px solid black;
     text-align: center;
-     
 }
+
+/*********GRID Columns AND Rows*********/
+ /* #one {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-column: 1/4;
+    grid-column: 1/span 2;
+
+}  */
+
+/* #two {
+    grid-row-start: 1;
+    grid-row-end: 3;
+    grid-row: 1/4;
+
+} */
