--- a/DAY 10 (CSS Grid)/style.css
+++ b/DAY 10 (CSS Grid)/style.css
@@ -2,24 +2,27 @@
     width: 600px;
     height: 300px;
     background-color: yellow;
-    display: grid;
+    display: inline-grid;
 
     /*********GRID TEMPLATES*********/
     /* grid-template-rows: 50px 50px 50px 
       50px 50px;
     grid-template-columns: 200px 200px 200px; */
     /* grid-template-rows: repeat(4,1fr); */
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: repeat(3, 1fr);
 
-/*********GRID GAPS*********/
+    /*********GRID GAPS*********/
     /* row-gap: 10px;
     column-gap: 30px; */
     grid-gap: 10px;
-justify-items: end;
+
+    /* justify-items: center;
+       align-items: center; */
+    place-items: center;
 
 
-    
+
 
 
 
@@ -34,13 +37,19 @@ justify-items: end;
 }
 
 /*********GRID Columns AND Rows*********/
- /* #one {
+/* #one {
     grid-column-start: 1;
     grid-column-end: 3;
     grid-column: 1/4;
     grid-column: 1/span 2;
 
 }  */
+
+#one {  
+    /* justify-self: end;
+    align-self: end; */
+    place-self: start;
+}
 
 /* #two {
     grid-row-start: 1;
