--- a/MINI_PROJECT/style.css
+++ b/MINI_PROJECT/style.css
@@ -12,11 +12,13 @@
 
 .btn_one {
     color: white;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 700;
     position: absolute;
     left: 16px;
     line-height: 60px;
+    cursor: pointer;
+
 }
 
 .sidebar_menu {
@@ -25,7 +27,7 @@
     height: 100vh;
     width: 300px;
     background-color: rgba(255, 255, 255, 0.1);
-    box-shadow: 0 0 6px rgba(243, 243, 243, 0.5);
+    box-shadow: 0 0 4px rgba(243, 243, 243, 0.5);
    
 }
 
@@ -45,13 +47,14 @@
     font-weight: 500;
 }
 
-.sidebar_menu .btn_two {
+.sidebar_menu .btn_two i {
     color: grey;
     font-size: 30px;
     line-height: 60px;
     position: absolute;
     left: 275px;
-    opacity: 0;
+    /* opacity: 0; */
+    cursor: pointer;
 }
 
 .sidebar_menu .menu {
@@ -73,13 +76,112 @@
 }
 
 .sidebar_menu .menu i {
-    padding-right: 10px;
+    padding-right: 8px;
 } 
 
 .sidebar_menu .social_media {
     position:absolute;
     left: 25%;
-    color: white;
-    opacity: 0.5;
+    bottom: 50px;
 
 }
+
+.sidebar_menu .social_media i {
+    color: white;
+    opacity: 0.5;
+    padding: 0 5px;
+}
+
+#check {
+    display: none;
+}
+
+.sidebar_menu .menu li:hover {
+    box-shadow: 0 0 4px rgba(243, 243, 243, 0.5);
+    font-size: 20px;
+    border-radius: 6px;
+    
+}
+
+.btn_one i:hover {
+    font-size: 50px;
+}
+.btn_two i:hover {
+    font-size: 40px;
+}
+
+/* .sidebar_menu .social_media i:hover {
+    opacity: 1;
+    transform: scale(1.1); 
+}*/
+
+/* .social_media ul a .fa-facebook:hover {
+    color: #3b5998 ;
+    transform: scale(1.5);
+    opacity: 1;
+}
+.social_media ul a .fa-twitter:hover {
+    color: #1DA1F2;
+    transform: scale(1.5);
+    opacity: 1;
+}
+.social_media ul a .fa-instagram:hover {
+    background: linear-gradient(45deg, 
+    #feda75,
+    #fa7e1e,  
+    #d62976,   
+    #962fbf,
+    #4f5bd5  
+  );
+    transform: scale(1.5);
+    opacity: 1;
+   
+}
+.social_media ul a .fa-youtube:hover {
+    color: #c4302b;
+    transform: scale(1.5);
+    opacity: 1;
+}
+ */
+
+ .social_media i.fa-facebook:hover {
+    background: #3b5998;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    transform: scale(1.5);
+    opacity: 1;
+}
+
+.social_media i.fa-twitter:hover {
+    background: #1DA1F2;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    transform: scale(1.5);
+    opacity: 1;
+}
+
+.social_media i.fa-instagram:hover {
+    background: linear-gradient(45deg, 
+    #feda75,
+    #fa7e1e,  
+    #d62976,   
+    #962fbf,
+    #4f5bd5  );
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    transform: scale(1.5);
+    opacity: 1;
+}
+
+.social_media i.fa-youtube:hover {
+    background-color: #c4302b;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    transform: scale(1.5);
+    opacity: 1;
+}
+
