--- a/DAY 12(Bootstrap)/Navbar.css
+++ b/DAY 12(Bootstrap)/Navbar.css
@@ -1,6 +1,3 @@
 .bg-body-tertiary {
-    background-color: #4F5E4A;
-}
-body {
-    /* background-color: #A1C349; */
+    background-color: whitesmoke;
 }
