--- a/SPOTIFY/style.css
+++ b/SPOTIFY/style.css
@@ -61,6 +61,7 @@ a {
     line-height: 2.5rem;
     opacity: 0.7;
     padding: 0.5rem 0.75rem;
+    
 
 }
 
@@ -81,15 +82,15 @@ a {
     background-color: #121212;
     border-radius: 1rem;
     height: 100%;
-    margin-top: 0.4rem;
+    margin-top: 0.5rem;
+    padding: 0.5rem 0.75rem;
+  
 }
 
 .option {
     display: flex;
     justify-content: space-between;
-    justify-items: center;
-    padding: 0.5rem 0.75rem;
-
+    align-items: center;
 }
 
 .lab-option img {
@@ -98,18 +99,51 @@ a {
 }
 
  .icons {
-    padding: 0.5rem 0.75rem;
     font-size: 1.25rem;
     display: flex;
 }
 
 .icons i {
-    margin-right: 1rem;
     opacity: 0.7;
+    margin-right: 1rem;
 }
 
 .icons i:hover {
-   
     opacity: 1;
+    cursor: pointer;
+}
+
+.box {
+    background-color: #232323;
+    border-radius: 0.75rem;
+    margin: 0.75rem 0 1.75rem 0;
+    padding:  0.75rem 1rem;
+
+}
+
+
+.box-p1 {
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.box-p2 {
+    font-size: 0.75rem;
+    opacity: 0.9;
+}
+
+.badge {
+    background-color: #fff;
+    border: none;
+    border-radius: 100px;
+    padding: 0.25rem 1rem;
+    font-weight: 700;
+    margin-top: 0.5rem;
+    height: 2rem;
+    width: fit-content;
+}
+
+.badge:hover {
+    transform: scale(1.1);
     cursor: pointer;
 }
