--- a/SPOTIFY/style.css
+++ b/SPOTIFY/style.css
@@ -30,6 +30,8 @@ body {
     flex: 1;
     border-radius: 1rem;  /*16px*/
     overflow: auto;
+    padding: 0 1.5rem 0 1.5rem;
+    max-height: 100%;
 
 }
 
@@ -126,7 +128,7 @@ a {
 
 .box-p1 {
     font-size: 1rem;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 .box-p2 {
@@ -151,3 +153,75 @@ a {
 }
 
 /* THE STYLING OF MAIN CONTENT  */
+
+.sticky-nav {
+    position: sticky;
+    top: 0;
+    background-color: #121212;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 0 1rem 0;
+
+}
+
+.sticky-nav-icons {
+   
+    margin-left: 0.75rem;
+    
+}
+
+.sticky-nav-option  {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.nav-item {
+    margin-right: 1rem;
+}
+
+#dark-badge {
+    background-color: #000;
+    color: white;
+}
+
+@media (max-width:1000px) {
+
+    .hide {
+        display: none;
+    }
+    
+}
+
+.card {
+    background-color: #232323;
+    border-radius: 0.5rem;
+    width: 150px;
+    padding: 1rem;
+    margin-right: 1.5rem;
+    margin-left: 1.5rem;
+}
+
+.cards-continer {
+    display: flex;
+}
+
+.card-img {
+    width: 100%;
+    border-radius: 0.5rem;
+}
+
+.card-title {
+    font-weight: 600;
+}
+
+.card-info {
+    font-size: 0.85rem;
+    opacity: 0.8;
+}
+
+.card-infos {
+    font-size: 0.75rem;
+    opacity: 0.8;
+}
