--- a/Myntra PROJECT/style.css
+++ b/Myntra PROJECT/style.css
@@ -44,6 +44,7 @@ header {
     font-weight: 700;
     text-transform: uppercase;
     border-bottom: 5px solid #ffffff;
+    padding: 28px 0;
 
 
 }
@@ -56,7 +57,8 @@ header {
 
 .search_bar {
     height: 40px;
-    min-width: 400px;
+    min-width: 200px;
+    width: 30%;
     display: flex;
     align-items: center;
 
@@ -86,3 +88,74 @@ header {
     border: 0;
 
 }
+
+.action_bar {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-weight: 700;
+    margin-right: 150px;
+    min-width: 200px;
+}
+
+.action_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#a1:hover {
+    border-bottom: 2px solid #EE5E72;
+   
+}
+#a2:hover {
+    border-bottom: 2px solid #FB57C0;
+}
+#a3:hover {
+    border-bottom: 2px solid #F36A11;
+}
+#a4:hover {
+    border-bottom: 2px solid #F3C211;
+}
+#a5:hover {
+    border-bottom: 2px solid #0CB7AE;
+}
+#a6:hover {
+    border-bottom: 2px solid #FE3E6C;
+}
+
+.banner_containet {
+    margin: 40px 0;
+}
+
+.banner_img {
+    width: 100%;
+    
+}
+
+.category_heading {
+    text-transform: uppercase;
+    color: #3E4152;
+    letter-spacing: .15em;
+    font-size: 1.8em;
+    margin: 50px 0 10px 30px;
+    max-height: 5em;
+    font-weight: 700;    
+}
+
+.category_items {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+
+}
+
+.seals_items {
+    width: 250px;
+}
+
+.seals_items:hover {
+    scale: 0.9;
+}
+
+
